k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: netop
  labels:
    app.kubernetes.io/name: netop
    app.kubernetes.io/part-of: netop-platform
    app.kubernetes.io/component: infrastructure
    environment: production
